--- a/RenderingEngine/RenderingEngine/RenderingEngine.vcxproj.filters
+++ b/RenderingEngine/RenderingEngine/RenderingEngine.vcxproj.filters
@@ -75,12 +75,12 @@
     <ClCompile Include="texture.cpp">
       <Filter>Source Files\Textures</Filter>
     </ClCompile>
+    <ClCompile Include="interaction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32.h">
@@ -115,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="stb_image.h">
       <Filter>Header Files\Textures</Filter>
+    </ClInclude>
+    <ClInclude Include="interaction.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
